# NanoLink

./: .gitignore  DOCS.md  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  routes.py  schemas.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20231126_initial.py
app/middleware/: logging.py  rate_limit.py  security_headers.py
app/services/: cache.py  click_logger.py  idempotency.py  rate_limiter.py  redis_client.py  short_code.py  shortener_service.py
app/utils/: logging.py
config/: settings.py
infra/: Procfile  railway.toml
infra/nginx/: lb.conf
tests/integration/: test_api.py
tests/unit/: test_shortener_service.py
workers/: click_consumer.py
