[project]
name = "short-url-service"
version = "0.1.0"
description = "Production-ready FastAPI URL shortener"
requires-python = ">=3.11"
authors = [{name = "Illumine"}]
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.30",
    "pydantic-settings~=2.4",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.29",
    "alembic~=1.13",
    "redis~=5.0",
    "structlog~=24.1",
    "python-json-logger~=2.0",
    "httpx~=0.27",
    "itsdangerous~=2.2",
    "tenacity~=8.2"
]

[project.optional-dependencies]
test = [
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "respx~=0.20"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
